@@ -1,3 +1,10 @@
+2005-12-02  Michael Albinus  <michael.albinus@gmx.de>
+
+	* configure.ac: Remove creation of info directory.
+
+	* Makefile.in (MANIFEST): Call ./config.status in order to
+	regenerate $(CONFIG_FILES).
+
 2005-10-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* Makefile.in (clean): Cleanup also subdirectory test.
